engines/ep/src/hash_table.cc
@@ -783,6 +783,10 @@ HashTable::Statistics::getMemChangedCallback() const {
 }
 
 void HashTable::Statistics::reset() {
+    // We are about to reset stats to 0, memory usage should be changing
+    // accordingly, so call the mem changed callback with the new amount.
+    getMemChangedCallback()(-getCacheSize());
+
     for (auto& core : llcLocal) {
         core = {};
     }
